# rules_rust

./: MODULE.bazel  OWNERS  OWNERS.clover
.bazelci/: presubmit.yml
bindgen/: repositories.bzl
crate_universe/: repositories.bzl
docs/: crate_universe.md
examples/bzlmod/hello_world/: BUILD.bazel  MODULE.bazel  hello_world_test.sh
proto/prost/: repositories.bzl
proto/prost/private/: repositories.bzl
rust/private/: extensions.bzl  rustc.bzl
test/: deps.bzl
tools/runfiles/: runfiles.rs
wasm_bindgen/: repositories.bzl
